# trail

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  dependency-check.yml
docs/: coding_standard.md  trail.md  trail_architecture.md  trail_development_environment_setup_guide.md  trail_implementation_guide.md  trail_implementation_plan.md
shell/: trail.bash  trail.fish  trail.zsh
src/: cli.rs  lib.rs  main.rs  session.rs
src/actions/: clipboard.rs  fs_ops.rs  mod.rs  shell_exec.rs
src/app/: history.rs  mod.rs  mode.rs  state.rs  tabs.rs
src/config/: default.toml  mod.rs  schema.rs
src/input/: command_parser.rs  keymap.rs  mod.rs
src/plugin/: lua_api.rs  mod.rs
src/preview/: binary.rs  directory.rs  image.rs  mod.rs  provider.rs  text.rs
src/ui/: mod.rs  nav_panel.rs  preview_panel.rs  status_bar.rs  theme.rs
src/workers/: fswatch.rs  git.rs  highlight.rs  image_decode.rs  mod.rs
tests/: command_parser_tests.rs  preview_tests.rs  render_snapshot_tests.rs  state_tests.rs
tests/fixtures/: .keep  sample.rs  sample.txt
